resolve textarea box width overflow issue in cancel reason modal

--- a/src/index.css
+++ b/src/index.css
@@ -234,7 +234,8 @@ input[type="number"] {
     animation: train 1s infinite linear;
 }
 
-
-
-
-
+textarea {
+    word-break: break-word;
+    overflow-wrap: break-word;
+    max-width: 100%;
+}
